--- a/style.css
+++ b/style.css
@@ -221,6 +221,7 @@ label {
 .parens {
   color: coral;
   font-size: 14px;
+  margin: 0;
 }
 
 input[type="radio"]:checked:after {
@@ -276,4 +277,45 @@ input[type="radio"]:after {
 .reg-price {
   margin-top: 5px;
   margin-bottom: 0;
+}
+
+.sub-terms {
+  margin-top: 5px;
+  font-size: 12px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.modal {
+  z-index: 10;
+  position: fixed;
+  display: none;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 70%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
