--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ input[type="radio"]:after {
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 70%;
+  width: 500px;
 }
 
 .close {
