--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body * {
 }
 
 .main-container {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Futura, sans-serif, Arial, "sans-serif";
   box-sizing: border-box;
 }
 
@@ -36,6 +36,14 @@ body * {
   margin: 2px;
 }
 
+.subBulletContain img {
+  width: 15px;
+  height: 15px;
+  margin-top: 15px;
+  margin-bottom: 5px;
+  margin-right: 3px;
+}
+
 .product {
   background-color: white;
   margin-left: 14px;
@@ -52,8 +60,8 @@ body * {
 }
 
 .selected-product {
-  box-shadow: 0px 0px 5px red;
-  border: red solid 1px;
+  box-shadow: 0px 0px 5px #7ec0e1;
+  border: #7ec0e1 solid 1px;
   opacity: 100%;
 }
 
@@ -68,6 +76,11 @@ body * {
   display: flex;
   width: 100%;
   justify-content: center;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
 }
 
 .package {
@@ -114,7 +127,7 @@ body * {
 
 .addon-text {
   color: black;
-  margin-left: 25px;
+  margin-left: 40px;
 }
 
 .cost-container {
@@ -145,6 +158,13 @@ body * {
 select {
   height: 30px;
   font-size: 15px;
+  border-color: #e15e3a;
+  border-width: 2px;
+}
+
+select:active,
+select:hover {
+  outline-color: #e15e3a;
 }
 
 .bullet {
@@ -154,7 +174,7 @@ select {
 }
 
 h5 {
-  color: coral;
+  color: #e15e3a;
   margin-bottom: 5px;
   margin-top: 15px;
   font-size: 14px;
@@ -194,9 +214,11 @@ label {
   align-self: center;
   height: 65px;
   border-radius: 5px;
+  border-color: #e15e3a;
+  font-weight: bold;
   font-size: 18px;
   color: white;
-  background-color: sienna;
+  background-color: #e15e3a;
   margin-top: 15px;
 }
 
@@ -212,7 +234,7 @@ label {
 }
 
 .parens {
-  color: coral;
+  color: #e15e3a;
   font-size: 14px;
   margin: 0;
 }
@@ -222,14 +244,14 @@ input[type="radio"]:checked:after {
   height: 14px;
   border-radius: 15px;
   position: relative;
-  top: -6px;
-  left: -2px;
-  background-color: sienna;
+  top: 0px;
+  left: 0px;
+  background-color: #e15e3a;
   content: "";
   display: inline-block;
   visibility: visible;
   border: 3px solid white;
-  outline: 1px solid sienna;
+  outline: 1px solid #e15e3a;
 }
 
 input[type="radio"]:after {
@@ -237,14 +259,14 @@ input[type="radio"]:after {
   height: 14px;
   border-radius: 15px;
   position: relative;
-  top: -6px;
-  left: -2px;
+  top: 0px;
+  left: 0px;
   background-color: lightgrey;
   content: "";
   display: inline-block;
   visibility: visible;
   border: 3px solid lightgrey;
-  outline: 1px solid sienna;
+  outline: 1px solid #e15e3a;
 }
 
 .addon input[type="radio"]:after {
@@ -253,14 +275,14 @@ input[type="radio"]:after {
 }
 
 .addon input[type="radio"]:checked:after {
-  background-color: sienna;
-  outline: 1px solid sienna;
+  background-color: #e15e3a;
+  outline: 1px solid #e15e3a;
 }
 
 #discount {
   margin: 0;
   font-size: 28px;
-  color: seagreen;
+  color: #e15e3a;
 }
 
 #total-price {
