--- a/style.css
+++ b/style.css
@@ -83,6 +83,11 @@ body * {
   align-items: center;
 }
 
+.arrow-img {
+  width: 50px;
+  height: 50px;
+}
+
 .package {
   background-color: lightgrey;
   width: 50%;
@@ -132,7 +137,7 @@ body * {
 
 .cost-container {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   margin: 0px 20px;
   /* width: 50%; */
 }
